# ingame

./: .gitignore  README.md  ingame.sh  options.txt  pyproject.toml  requirements.txt
ingame/: main.py
ingame/models/: App.py  EntriesModel.py  Entry.py  GameAgent.py  GameDescription.py  GameEntry.py  Gamepad.py  GamesModel.py
qml/: .gitignore  qml.qml  qml.qmlproject
qml/components/: Button.qml  ButtonImage.qml  Tabs.qml  TextButton.qml
qml/constants/: controller.js  options.js  scene.js  style.js  tabs.js
qml/delegates/: Entry.qml  Game.qml
qml/scenes/: GameInfoScene.qml  HomeScene.qml  RunningScene.qml
qml/tabs/: EntriesTab.qml  GamesTab.qml  SystemTab.qml
src/: main.py
src/models/: App.py  GamesModel.py
